@@ -79,7 +79,7 @@ class ShopUnitServiceIntegrationTest {
         offer1.setParentId(category1.getId());
         offer2.setParentId(category2.getId());
 
-        shopUnitService.save(new ShopUnitImportRequest(List.of(category1, category2, offer1, offer2), "2022-05-28T21:12:01.000Z"));
+        shopUnitService.save(new ShopUnitImportRequest(Arrays.asList(category1, category2, offer1, offer2), "2022-05-28T21:12:01.000Z"));
 
         ShopUnit resultCategory1 = shopUnitRepository.findById(category1.getId()).orElseThrow(() -> new ShopUnitNotFoundException(category1.getId()));
         ShopUnit resultCategory2 = shopUnitRepository.findById(category2.getId()).orElseThrow(() -> new ShopUnitNotFoundException(category2.getId()));
